# nba-forecast-lab

./: .gitignore  AGENTS.md  NBA_ML_PROJECT_BRIEF.md  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
data/snapshots/2026-06-10/: 2026-06-11-recent5-raw.joblib  games.parquet
docs/: architecture.md  data_dictionary.md  experiments.md  leakage_prevention.md  model_card.md  runbook.md  source_report.md
docs/decisions/: 0001-data-storage.md  0002-series-simulation-contract.md  0003-as-of-matchup-prediction-contract.md  0004-frozen-snapshot-deployment.md  0005-immutable-prediction-registry.md
src/nba_forecast/: __init__.py  cli.py  config.py
tests/: __init__.py  test_cli.py  test_project_config.py  test_streamlit_app.py
tests/application/: test_fair_odds.py  test_forecast_retrospective.py  test_matchup_prediction.py  test_model_performance.py  test_playoff_backtest.py  test_prediction_registry.py  test_series_replay.py  test_simulator_lab.py
tests/data/: test_prediction_registry_storage.py  test_source_nba.py  test_storage.py  test_transform.py  test_validate.py
tests/evaluation/: test_baseline_evaluation.py  test_metrics.py  test_model_comparison.py  test_splits.py
tests/features/: test_elo.py  test_game_features.py  test_matchup_features.py  test_team_state.py
tests/fixtures/: multi_season_team_game_rows.csv  team_game_rows.csv  team_game_rows.metadata.json
tests/models/: test_artifacts.py  test_baselines.py  test_calibration.py  test_xgboost_model.py
tests/simulation/: test_series.py
(+55 files in other folders)
