[build-system]
requires = ["setuptools>=68,<82"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-forecast-lab"
version = "0.1.0"
description = "Leakage-safe NBA game probability forecasting and playoff simulation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "duckdb>=1.1,<2",
  "nba_api>=1.6,<2",
  "pandas>=2.1,<3",
  "pyarrow>=15,<20",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8.0,<9",
  "ruff>=0.8,<1",
]

[project.scripts]
nba-forecast = "nba_forecast.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.9"
files = ["src"]
ignore_missing_imports = true
warn_unused_configs = true
